Add Script, Styling

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
 	"devDependencies": {},
 	"scripts": {
-		"sass": "node-sass -w scss -o css"
+		"sass": "node-sass -w scss/ -o css --recursive"
 	},
 	"repository": {
 		"type": "git",
